Changes blog title, link styling

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ben Jackson
+title: Writings on code | Ben Jackson
 description: "A programming blog written by Ben Jackson"
 url: "http://bjackson2.github.io/"
 author:
