Changes site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Writings on code | Ben Jackson
-description: "A programming blog written by Ben Jackson"
+title: "Writings on code | Ben Jackson"
+description: "A programming blog"
 url: "http://bjackson2.github.io/"
 author:
   name: "Ben Jackson"
